display card, location, file, audio message and fix bugs

--- a/iOS/Example/CRIMSDKUIKit/Debug.xcconfig
+++ b/iOS/Example/CRIMSDKUIKit/Debug.xcconfig
@@ -3,7 +3,7 @@
 //  CRIMSDKUIKit
 //
 //  Created by YunWu01 on 2024/1/11.
-//  Copyright © 2024 rentsoft. All rights reserved.
+//  Copyright © 2024 tom. All rights reserved.
 //
 
 // Configuration settings file format documentation can be found at:
