--- a/iOS/Example/CRIMSDKUIKit/VersionConfig.xcconfig
+++ b/iOS/Example/CRIMSDKUIKit/VersionConfig.xcconfig
@@ -3,10 +3,10 @@
 //  CRIMSDKUIKit
 //
 //  Created by YunWu01 on 2024/1/11.
-//  Copyright © 2024 rentsoft. All rights reserved.
+//  Copyright © 2024 tom. All rights reserved.
 //
 
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
-CRIM_APP_BUILD_VERSION=2.6.5
-CRIM_APP_BUILD_NUMBER=2
+CRIM_APP_BUILD_VERSION=2.7.1
+CRIM_APP_BUILD_NUMBER=8
