--- a/Web/tsconfig.json
+++ b/Web/tsconfig.json
@@ -14,7 +14,8 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": "./src",
     "paths": {
-      "~/*": ["./*"]
+      "~/*": ["./*"],
+      "@/*": ["../../src/*"]
     }
   },
   "include": ["**/*.ts", "**/*.vue"]
